force-app/main/default/objects/Quote/fields/Currecny_Code__c.field-meta.xml
<CustomField>
    <fullName>Currecny_Code__c</fullName>
    <label>Currecny Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>