force-app/main/default/objects/Quote/fields/Merchant_Cost__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant Cost</label>
    <type>Checkbox</type>
</CustomField>