force-app/main/default/objects/Quote/fields/Merchant_Quotes_Status__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Quotes_Status__c</fullName>
    <label>Merchant Quotes Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>