force-app/main/default/objects/Quote/fields/Quotes_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Quotes_Declined_Reason__c</fullName>
    <label>Quotes Declined Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>