force-app/main/default/objects/Quote/fields/Trip_Price__c.field-meta.xml
<CustomField>
    <fullName>Trip_Price__c</fullName>
    <label>Trip Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>